# RealtimeFaceRecognition

./: .gitignore  CMakeLists.txt  FaceCaptureController.cpp  FaceCaptureController.h  README.md  main.cpp
